<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_friends">

    <fragment
        android:id="@+id/navigation_friends"
        android:name="ru.grandibambino.remembermeplease.presentation.friends.FriendsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_friends" >
        <action
            android:id="@+id/action_navigation_friends_to_addFriendsFragment"
            app:destination="@id/addFriendsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ru.grandibambino.remembermeplease.presentation.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ru.grandibambino.remembermeplease.presentation.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/addFriendsFragment"
        android:name="ru.grandibambino.remembermeplease.presentation.add_friend.AddFriendFragment"
        android:label="AddFriendsFragment"
        tools:layout="@layout/fragment_add_friends"/>
</navigation>