<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="?actionBarSize">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/default_margin_horizontal"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierStart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            app:barrierDirection="start" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierEnd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            app:barrierDirection="end" />

        <View
            android:id="@+id/separatorFirstName"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_separator"
            android:layout_marginTop="@dimen/default_margin_horizontal"
            android:background="@color/colorGrey30"
            app:layout_constraintEnd_toEndOf="@id/barrierEnd"
            app:layout_constraintStart_toStartOf="@id/barrierStart"
            app:layout_constraintTop_toBottomOf="@id/avatar" />

        <TextView
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_horizontal"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24"
            app:layout_constraintEnd_toEndOf="@id/barrierEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/barrierStart"
            app:layout_constraintTop_toBottomOf="@id/separatorFirstName"
            tools:text="Petrov" />

        <View
            android:id="@+id/separatorLastName"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_separator"
            android:layout_marginTop="@dimen/default_margin_horizontal"
            android:background="@color/colorGrey30"
            app:layout_constraintEnd_toEndOf="@id/barrierEnd"
            app:layout_constraintStart_toStartOf="@id/barrierStart"
            app:layout_constraintTop_toBottomOf="@id/firstName" />

        <TextView
            android:id="@+id/lastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_horizontal"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24"
            app:layout_constraintEnd_toEndOf="@id/barrierEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/barrierStart"
            app:layout_constraintTop_toBottomOf="@id/separatorLastName"
            tools:text="Petrov" />

        <View
            android:id="@+id/separatorBirthday"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_separator"
            android:layout_marginTop="@dimen/default_margin_horizontal"
            android:background="@color/colorGrey30"
            app:layout_constraintEnd_toEndOf="@id/barrierEnd"
            app:layout_constraintStart_toStartOf="@id/barrierStart"
            app:layout_constraintTop_toBottomOf="@id/lastName" />

        <TextView
            android:id="@+id/birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_horizontal"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24"
            app:layout_constraintEnd_toEndOf="@id/barrierEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/barrierStart"
            app:layout_constraintTop_toBottomOf="@id/separatorBirthday"
            tools:text="20.12.20" />

        <View
            android:id="@+id/separatorGender"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_separator"
            android:layout_marginTop="@dimen/default_margin_horizontal"
            android:background="@color/colorGrey30"
            app:layout_constraintEnd_toEndOf="@id/barrierEnd"
            app:layout_constraintStart_toStartOf="@id/barrierStart"
            app:layout_constraintTop_toBottomOf="@id/birthday" />

        <TextView
            android:id="@+id/genderHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_horizontal"
            android:text="@string/gender_check_hint"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/barrierEnd"
            app:layout_constraintStart_toStartOf="@id/barrierStart"
            app:layout_constraintTop_toBottomOf="@id/separatorGender" />


        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkedButton="@id/male"
            android:orientation="vertical"
            android:paddingStart="@dimen/default_padding_vertical"
            android:paddingEnd="@dimen/default_padding_vertical"
            app:layout_constraintEnd_toEndOf="@id/barrierEnd"
            app:layout_constraintStart_toStartOf="@id/barrierStart"
            app:layout_constraintTop_toBottomOf="@id/genderHint">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_separator"
                android:layout_marginTop="@dimen/default_margin_horizontal"
                android:background="@color/colorGrey30" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </RadioGroup>

        <View
            android:id="@+id/separatorKinship"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_separator"
            android:layout_marginTop="@dimen/default_margin_horizontal"
            android:background="@color/colorGrey30"
            app:layout_constraintEnd_toEndOf="@id/barrierEnd"
            app:layout_constraintStart_toStartOf="@id/barrierStart"
            app:layout_constraintTop_toBottomOf="@id/gender" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/kinshipContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/barrierEnd"
            app:layout_constraintStart_toStartOf="@id/barrierStart"
            app:layout_constraintTop_toBottomOf="@id/separatorKinship">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/checkKinship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/check_kinship_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_horizontal"
            android:text="@string/add_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/barrierEnd"
            app:layout_constraintStart_toStartOf="@id/barrierStart"
            app:layout_constraintTop_toBottomOf="@id/kinshipContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>